# ya3-report

./: .gitignore  LICENSE  MANIFEST.in  Makefile  entry_points.cfg  requirements.txt  setup.cfg
docker/: Dockerfile
tests/: test_daily.py  test_data.csv  test_weekly.py
ya3_report/: __init__.py  __main__.py  cli.py  daily.py  environ.py  monthly.py  weekly.py
ya3_report/notebooks/: daily_report.ipynb  monthly_report.ipynb  weekly_report.ipynb
